# libspatialite

./: CMakeLists.txt
cmake/: config.h.cmake.in  configure.cmake  gaiaconfig.h.cmake.in
src/: CMakeLists.txt
src/gaiageo/: gg_shape.c
